Updates from Overleaf

--- a/EuroSys2023/evaluation.tex
+++ b/EuroSys2023/evaluation.tex
@@ -43,7 +43,7 @@ Compiler &  GCC-8.3.0 \\ \hline
 
 \textbf{Compared Allocators and Evaluated Applications: }  We compare \NM{} with multiple popular allocators, such as the default Linux allocator (Glibc-2.28)~\cite{glibcweb}, TCMalloc~\cite{tcmalloc2},  TCMalloc-NUMA~\cite{tcmallocnuma}, jemalloc-5.2.1~\cite{jemalloc}, Intel TBB-2021.5~\cite{tbb2}, Scalloc-1.0.0~\cite{Scalloc}, and mimalloc-1.6.7~\cite{mimalloc}. Note that we are comparing against TCMalloc's NUMA awareness version (released in July 2021), and the newest version of TBB with NUMA support (released in December 2021). The evaluated TCMalloc already includes TEMERAIRE~\cite{TEMERAIRE}'s huge page support. 
 %Among them, TCMalloc, jemalloc, TBB, and mimalloc are commercial allocators designed and maintained by Industrial Giants, like Google, Facebook, Intel, and Microsoft separately. 
-We do not include Hoard~\cite{Hoard} as it is not the state-of-art anymore~\cite{Scalloc, mimalloc}. Multithreaded applications chosen to evaluate the performance include PARSEC applications~\cite{parsec}, five OpenMP/MPI applications from CORAL-2 Benchmarks~\cite{coral2}, including \texttt{Nekbone}, \texttt{QMCPACK}, \texttt{LAMMPS}, \texttt{AMG} and \texttt{Quicksilver}, and real applications such as \texttt{Apache httpd-2.4.35}, \texttt{MySQL-5.7.15}, \texttt{Memcached-1.4.25}, \texttt{SQLite-3.12.0}, \texttt{Aget}, \texttt{Pfscan} and \texttt{Pbzip2}.
+We do not include Hoard~\cite{Hoard} as it is not the state-of-art anymore~\cite{Scalloc, mimalloc}. Multithreaded applications chosen to evaluate the performance include PARSEC applications~\cite{parsec}, five OpenMP/MPI applications from CORAL-2 Benchmarks~\cite{coral2}, including \texttt{Nekbone}, \texttt{QMCPACK}, \texttt{LAMMPS}, \texttt{AMG} and \texttt{Quicksilver}, and real applications such as \texttt{Apache httpd-2.4.35}, \texttt{MySQL-5.7.15}, \texttt{Memcached-1.4.25}, \texttt{SQLite-3.12.0}, \texttt{Aget}, \texttt{Pfscan} and \texttt{Pbzip2}. \todo{dataset}
 
 %Note that we currently have an issue running freqmine, an openmp application, which is excluded right now. 
 
@@ -280,7 +280,7 @@ In Figure~\ref{2node-hoard-mem}, the average normalized value of \NM{} is larger
 
 %We also evaluated the scalability of different allocators. 
 
-To validate the scalability of \NM{}, we use four synthetic applications from Hoard~\cite{Hoard}, including \texttt{threadtest}, \texttt{larson}~\cite{Larson}, \texttt{cache-scratch} and \texttt{cache-slash}, which is also employed by existing work~\cite{Scalloc}. We do not use the same applications in Section~\ref{sec:evaluation}, as they are not scalable by design.
+To validate the scalability of \NM{}, we use four synthetic applications from Hoard~\cite{Hoard}, including \texttt{threadtest}, \texttt{larson}~\cite{Larson}, \texttt{cache-scratch} and \texttt{cache-slash}, which is also employed by existing work~\cite{Scalloc}. We do not use the same applications in Section~\ref{sec:evaluation}, as they are not scalable by design. \todo{someone complain it!}
 %We have verified blacksholes, bodytrack, canneal, and raytrace.
 For instance, raytrace has no performance difference when running with 16 threads or 40 threads.
 %Therefore, we are using four synthetic applications from Hoard~\cite{Hoard}, including \texttt{threadtest}, \texttt{larson}~\cite{Larson}, \texttt{cache-scratch} and \texttt{cache-slash}, which is also employed by existing work~\cite{Scalloc}. \texttt{larson} simulates a multithreaded server that could respond to requests from different clients, and \texttt{threadtest} is an application that performs a large number of allocations and deallocations within a specified number of threads. Both \texttt{cache-scratch} and \texttt{cache-thrash} test false sharing issues that can be introduced by allocators, where multiple threads are getting and accessing different objects in the same cache line.  
