--- a/EuroSys2023/numalloc.tex
+++ b/EuroSys2023/numalloc.tex
@@ -1,9 +1,5 @@
-\documentclass[pageno]{jpaper}
-
-%replace XXX with the submission number you are given from the ASPLOS submission site.
-\newcommand{\asplossubmissionnumber}{351}
-
-\usepackage[normalem]{ulem}
+\documentclass[conference]{IEEEtran}
+\IEEEoverridecommandlockouts
 
 \usepackage{cite}
 \usepackage{amsmath,amssymb,amsfonts}
