--- a/TPDS/intro.tex
+++ b/TPDS/intro.tex
@@ -10,7 +10,8 @@ The memory allocator is one such component that could help solve these challenge
 
 However, general-purpose memory allocators, such as dlmalloc~\cite{dlmalloc},  Hoard~\cite{Hoard}, TCMalloc~\cite{tcmalloc}, jemalloc~\cite{jemalloc}, SuperMalloc~\cite{supermalloc}, Scalloc~\cite{Scalloc}, and mimalloc~\cite{mimalloc}, were designed for symmetric multiprocessing machines, without  considering the heterogeneity of the underlying hardware~\cite{mimalloc}. As a result, they can not achieve a good performance, based on existing work~\cite{tcmallocnew, yang2019jarena} and our evaluation.
 
-Some memory allocators support the NUMA architecture~\cite{tcmallocnew, kim2013node, yang2019jarena, mimalloc}, as further discussed in Section~\ref{sec:related}. Among them, Kaminski designs the first NUMA-aware memory allocator~\cite{tcmallocnew}, called as TCMalloc-NUMA in the remainder of this paper. TCMalloc-NUMA aims to reduce remote accesses, but without considering interconnect congestion and node imbalance that may also significantly affect the performance. In TCMalloc-NUMA, allocations will be satisfied from a per-thread heap first, and then the freelist of the current node. However, \textit{TCMalloc-NUMA has multiple issues that may significantly affect its effectiveness}. First, it did not control deallocations of objects. A freed object is always placed into the deallocating thread's local buffer, a mechanism originated from TcMalloc~\cite{tcmalloc}. However, if such an object is originated from a remote node, this clearly will cause unnecessary remote accesses. Second, it did not control the placement of threads: a thread can be migrated to a remote node upon synchronizations or system calls, which not only force this thread to access its stack remotely but also reload all data that are already in the cache of its original node.  Further, after the migration, all deallocated objects by this thread will be placed into the new node's freelist afterwards, causing unnecessary remote accesses. 
+Some memory allocators support the NUMA architecture~\cite{tcmallocnew, kim2013node, yang2019jarena, mimalloc}, as further discussed in Section~\ref{sec:related}. Among them, Kaminski designs the first NUMA-aware memory allocator~\cite{tcmallocnew}, called as TCMalloc-NUMA in the remainder of this paper. %TCMalloc-NUMA aims to reduce remote accesses, but without considering interconnect congestion and node imbalance that may also significantly affect the performance. 
+In TCMalloc-NUMA, allocations will be satisfied from a per-thread heap first, and then the freelist of the current node. However, \textit{TCMalloc-NUMA has multiple issues that may significantly affect its effectiveness}. First, it did not control deallocations of objects. A freed object is always placed into the deallocating thread's local buffer, a mechanism originated from TcMalloc~\cite{tcmalloc}. However, if such an object is originated from a remote node, this clearly will cause unnecessary remote accesses. Second, it did not control the placement of threads: a thread can be migrated to a remote node upon synchronizations or system calls, which not only force this thread to access its stack remotely but also reload all data that are already in the cache of its original node.  Further, after the migration, all deallocated objects by this thread will be placed into the new node's freelist afterwards, causing unnecessary remote accesses. 
 
 \textbf{This paper proposes a novel memory allocator -- \NM{} -- that considers both hardware heterogeneity and allocation/deallocation attributes, with its fine-grained memory management}. \NM{} not only deals with hardware heterogeneity, but also employs different policies for objects with different attributes, such as share-ability, allocation pattern, sizes, and origin. We proposes multiple mechanisms that improve both load balance and locality, as detailed in the following.   
 
