--- a/EuroSys2023/intro.tex
+++ b/EuroSys2023/intro.tex
@@ -6,20 +6,24 @@
 Non-Uniform Memory Access (NUMA) is the de-facto design for modern many-core machines in order to address the scalability issues of increasing hardware cores. In NUMA architecture, each processor (or node/socket interchangeably) has its own memory, allowing threads running on different nodes accessing their own memory concurrently. Unfortunately, it is challenging to achieve the expected scalability. One notorious performance issue is caused by remote accesses that a task accesses the memory of a remote node (called remote memory), since a remote access has much higher latency than accessing the memory from the local node (or a local access)~\cite{Blagodurov:2011:CNC:2002181.2002182}. Although many profiling tools are proposed to identify NUMA issues of applications~\cite{Intel:VTune, Memphis, Lachaize:2012:MMP:2342821.2342826, XuNuma, NumaMMA, 7847070, NumaPerf}, they only focus on issues inside a memory object, while still requires memory allocators to ensure the locality of memory allocations/deallocations. 
 
 In order to reduce remote accesses, some NUMA-aware allocators~\cite{tcmallocnuma, kim2013node, yang2019jarena} have been proposed in the past. Kaminski built the first NUMA-aware memory allocator on top of TCMalloc in 2008~\cite{tcmallocnuma}, called \TN{} in the remainder of this paper, where \TN{}'s designs are integrated into the modern TCMalloc~\cite{tcmalloc2} based on our analysis. \TN{} adds a freelist and page-span for each NUMA node, and binds the physical memory of each page-span to a specific physical node. \TN{} improves the locality by allocating objects from the per-node list/page-span that a thread is running on. However, \TN{} or TCMalloc typically return a freed object to the deallocating thread's freelist (without acquiring the lock), a common design shared by most allocators to reduce the synchronization overhead~\cite{Hoard}. Such a design will introduce the locality issue, when the deallocating thread is located on a different node from the allocating thread.  
-
 %These designs are also borrowed by general-purpose allocators for their NUMA support, such as TCMalloc~\cite{tcmalloc2} and mimalloc~\cite{mimalloc}. 
 %\todo{Similarly, TCMalloc designs a page allocator for each NUMA node so that a thread is allocating the physical memory from the page node.}
 mimalloc~\cite{mimalloc}'s design alleviates this problem, although its initial target is not to solve the locality issue of NUMA architecture. It proposes per-page (e.g., 64K) free lists that are typically allocated/used by a single thread at a time, and all objects from the same page (even deallocated by other threads) will be returned to the same per-page free list so that they can be re-used by the same thread later. 
 %, which \todo{not clear, change to: On the other hand, mimalloc~\cite{mimalloc} manages freelists from page granularity and each page has an extra thread-free list that is utilized to handle deallocation from remote threads, which could alleviate the above-mentioned problem.}
 
 
-However, \textit{none of existing allocators achieves the full locality of memory allocations}, as they did not handle unexpected thread migrations between different nodes. When a thread is migrated to a different node, the migration will turn all of its local accesses to remote ones, introducing remote accesses. Further, existing allocators do not take advantage of the location relationship between threads and memory when assigning metadata, handling memory allocations/deallocations, and sharing huge pages. In order to address these issues, we propose a novel allocator, \NM{}, with the following novel contributions.  
+However, \textit{none of existing allocators achieves the full locality of memory allocations}, as they did not handle unexpected thread migrations between different nodes. When a thread is migrated to a different node, the migration will turn all of its local accesses to remote ones, introducing higher latency caused by remote accesses. Further, existing allocators do not take advantage of the location relationship between threads and memory when handling memory allocations/deallocations, assigning metadata, and sharing huge pages, \todo{which 
+makes them miss the opportunities to improve the performance.} In order to address these issues, we propose a novel allocator, \NM{}, with the following novel contributions.  
 
 
-First, \NM{} proposes a \textbf{binding-based memory management} that also binds threads to physical nodes, in addition to memory binding, with the following benefits: (1) the bindings enable \NM{} to obtain the origin (or the physical node) of memory and threads with few instructions inside the user space, without the need of invoking expensive system calls (around  $10,000$ cycles for getting the node of the memory), enabling more advanced memory management as discussed below; %Therefore, it is infeasible to perform more advanced memory management, as the performance benefits of reducing remote accesses will be canceled out by the cost of getting the origin information via system calls.
-(2) thread binding eliminates remote accesses caused by the above-mentioned thread migrations, but it does not exclude OS-based scheduling. \NM{} only binds a thread to a specific node, and also allows users to specific the binding explicitly; and (3) thread binding reduces the locality issues of heap metadata, such as the mapping of identifying the size of each object, which could be always allocated from the same physical node. Note that while past systems~\cite{li2013numa, XuNuma, Lepers:2015:TMP:2813767.2813788} have exploited thread binding to improve the performance of NUMA applications, \NM{} is the first allocator that implements and utilizes both memory and threading binding inside the memory allocator. 
+First, \NM{} proposes a \textbf{binding-based memory management} that also binds threads to physical nodes, in addition to memory binding, with the following benefits: (1) the bindings enable \NM{} to obtain the origin (or the physical node) of memory and threads with few instructions inside the user space, without the need of invoking expensive system calls (around  $10,000$ cycles for getting the node of the memory), enabling more advanced memory management \todo{such as origin-aware memory management and incremental sharing mechanism;}
+% as discussed below; %Therefore, it is infeasible to perform more advanced memory management, as the performance benefits of reducing remote accesses will be canceled out by the cost of getting the origin information via system calls.
+(2) thread binding eliminates remote accesses caused by the above-mentioned thread migrations, but it does not exclude OS-based scheduling \todo{as \NM{} only binds a thread to a specific node, instead of a core. Moreover, \NM{} allows users to specify the binding explicitly;}
+%  \NM{} only binds a thread to a specific node, and also allows users to specific the binding explicitly; 
+and (3) thread binding reduces the locality issues of heap metadata, such as the mapping for identifying the size of each object, which could be always allocated from the same physical node. Note that while past systems~\cite{li2013numa, XuNuma, Lepers:2015:TMP:2813767.2813788} have exploited thread binding to improve the performance of NUMA applications, \NM{} is the first allocator that implements and utilizes both memory and threading binding inside the memory allocator. 
 
-Second, \NM{} ensures the full locality of memory allocations with its \textbf{origin-aware memory management}, based on memory and thread binding. In particular, \textit{\NM{} ensures that each thread will always allocate the memory from the same physical node that the thread is running on}. Since \NM{} binds the virtual memory to physical nodes explicitly and maintains the mapping relationship internally, it could always infer the physical node (or origin) of each object. During deallocations, \NM{} guarantees that a freed object will be always placed into a freelist with the same origin as the allocating thread. That is, an object is returned to the deallocating thread \textit{only if} the object is originated from the same node as the current thread; otherwise, it will be returned to its original node (e.g., per-node free list). Because of this reason, \NM{} can ensure that a thread will always allocate objects originating from the same node, as per-thread and per-node free lists only hold local objects. In addition, \NM{} ensures that all heap metadata exists on the same local node, such as the mapping of tracking the size of objects.
+Second, \NM{} ensures the full locality of memory allocations with its \textbf{origin-aware memory management}, based on memory and thread binding. In particular, \textit{\NM{} ensures that each thread will always allocate the memory from the same physical node that the thread is running on}. Since \NM{} binds the virtual memory to physical nodes explicitly and maintains the mapping relationship internally, it could always infer the physical node (or origin) of each object. During deallocations, \NM{} guarantees that a freed object will be always placed into a freelist with the same origin as the allocating thread. That is, an object is returned to the deallocating thread \textit{only if} the object is originated from the same node as the current thread; otherwise, it will be returned to its original node (e.g., per-node free list). 
+In this way, \NM{} can ensure that a thread will always allocate objects originating from the same node, as per-thread and per-node free lists only hold local objects. In addition, \NM{} ensures that all heap metadata exists on the same local node, such as the mapping of tracking the size of objects.
 
 
 
@@ -34,10 +38,11 @@ Second, \NM{} ensures the full locality of memory allocations with its \textbf{o
 % simply return freed objects to their original free lists, which is easier to achieve. \NEW{mimalloc considers the locality of deallocation, but it's done from thread level, which makes the threads running on the same node complete for the lock.}
 
 Last but not least, \NM{} proposes a new \textbf{incremental sharing} mechanism to take advantage of the Transparent Huge Pages (THP) of modern hardware~\cite{hugepage}. Huge pages are expected to significantly reduce Translation Lookaside Buffer (TLB) misses, as each page table entry covers a larger range of virtual addresses (e.g., 2MB instead of 4KB). However, most existing allocators~\cite{dlmalloc, Hoard, Scalloc} do not support huge pages, or even require to disable huge pages~\cite{scallochugepage}.  Allocators supporting huge pages have their own shortcomings: LLAMA~\cite{LLAMA} allocates objects from huge pages based on the liveness of objects, but requires expensive analysis and profiling; TEMERAIRE~\cite{TEMERAIRE} does not share huge pages between different threads, since mistakenly letting two remote threads share the same huge page may impose some performance degradation.  
-In contrast, \NM{} allows different threads running on the same node share the same huge page, based on explicit binding of threads. 
-%with different size classes running on the same physical node, 
-%Internally, \NM{} always prefers to utilize huge pages: it not only allows multiple threads to share the same huge page, but also 
-\NM{} also shares the same huge page between different size classes of different threads incrementally: each thread will acquire either 32KB or an object (if the object is larger than 32KB) each time from the current huge page, instead of one whole huge page. Because it allows different threads and different size classes to share the same huge page, it practically minimizes the internal fragmentation of using huge pages.  
+\todo{In contrast, \NM{} includes explicit thread binding which makes it possible to share the pages between threads running on the same node. This sharing also applies to objects of different size classes, which further reduces the memory fragmentation.}
+% We call it ``incremental sharing'' as each thread only fetches the amount of memory it needs from currently available page at a time, instead of the entire page.
+% In contrast, \NM{} allows different threads running on the same node share the same huge page, based on explicit binding of threads. 
+%with different size classes running on the same physical node,
+% \NM{} also shares the same huge page between different size classes of different threads incrementally: each thread will acquire either 32KB or an object (if the object is larger than 32KB) each time from the current huge page, instead of one whole huge page. Because it allows different threads and different size classes to share the same huge page, it practically minimizes the internal fragmentation of using huge pages.  
 %\NM{} supports the \textbf{incremental sharing} that each thread will get few objects at a time, instead of one whole huge page, in order to reduce memory fragmentation. 
 %As it is very expensive to track whether a huge page with small objects is completely deallocated, the proposed work will use different huge pages for big and small objects separately, which allows us to only track the full status of huge pages for big objects. 
 % To make the OS use huge pages inherently, \NM{} maps a large region of memory (larger than the size of a huge page) for each node initially. 
