Updates on TPDS

--- a/TPDS/intro.tex
+++ b/TPDS/intro.tex
@@ -10,15 +10,30 @@ The memory allocator is one such component that could help solve these challenge
 
 However, general-purpose memory allocators, such as dlmalloc~\cite{dlmalloc},  Hoard~\cite{Hoard}, TCMalloc~\cite{tcmalloc}, jemalloc~\cite{jemalloc}, SuperMalloc~\cite{supermalloc}, Scalloc~\cite{Scalloc}, and mimalloc~\cite{mimalloc}, were designed for symmetric multiprocessing machines, without  considering the heterogeneity of the underlying hardware~\cite{mimalloc}. As a result, they can not achieve a good performance, based on existing work~\cite{tcmallocnew, yang2019jarena} and our evaluation.
 
-Some memory allocators support the NUMA architecture~\cite{tcmallocnew, kim2013node, yang2019jarena, mimalloc}, as further discussed in Section~\ref{sec:related}. Among them, Kaminski designs the first NUMA-aware memory allocator~\cite{tcmallocnew}, called as TCMalloc-NUMA in the remainder of this paper. %TCMalloc-NUMA aims to reduce remote accesses, but without considering interconnect congestion and node imbalance that may also significantly affect the performance. 
-In TCMalloc-NUMA, allocations will be satisfied from a per-thread heap first, and then the freelist of the current node. However, \textit{TCMalloc-NUMA has multiple issues that may significantly affect its effectiveness}. First, it did not control deallocations of objects. A freed object is always placed into the deallocating thread's local buffer, a mechanism originated from TcMalloc~\cite{tcmalloc}. However, if such an object is originated from a remote node, this clearly will cause unnecessary remote accesses. Second, it did not control the placement of threads: a thread can be migrated to a remote node upon synchronizations or system calls, which not only force this thread to access its stack remotely but also reload all data that are already in the cache of its original node.  Further, after the migration, all deallocated objects by this thread will be placed into the new node's freelist afterwards, causing unnecessary remote accesses. 
+Some memory allocators support the NUMA architecture~\cite{tcmallocnew, kim2013node, yang2019jarena, mimalloc}, as further discussed in Section~\ref{sec:related}. Among them, Kaminski designs the first NUMA-aware memory allocator~\cite{tcmallocnew}, called as TCMalloc-NUMA in the remainder of this paper.  %TCMalloc-NUMA aims to reduce remote accesses, but without considering interconnect congestion and node imbalance that may also significantly affect the performance. 
+%These NUMA allocators aim to reduce remote accesses
+Existing allocators explicitly bind the memory to a physical node so that the memory can be returned back to a specific heap based on its origin upon memory deallocations. However, this is not sufficient to eliminate remote accesses, if without considering the location of threads.
+%, as threads can be migrated between different nodes. 
+In theory, an allocator can always check a thread's physical node (e.g., via the system call) so that a thread only allocates the memory from its local node, which is unfortunately too expensive due to the high overhead. Further, some common practice of existing allocators also weakens the locality guarantee: each thread typically tracks objects deallocated by itself, and prefers the available memory in its local cache upon memory allocations. However, there is no guarantee that the object deallocated by a thread is originally from the thread's local physical node. 
 
-\textbf{This paper proposes a novel memory allocator -- \NM{} -- that considers both hardware heterogeneity and allocation/deallocation attributes, with its fine-grained memory management}. \NM{} not only deals with hardware heterogeneity, but also employs different policies for objects with different attributes, such as share-ability, allocation pattern, sizes, and origin. We proposes multiple mechanisms that improve both load balance and locality, as detailed in the following.   
+%As a result, 
+%none of existing allocators achieves the full locality of memory allocations, where a thread may still allocate a remote object that is locating on a different node from it is currently running on. This problem is mainly caused by the fact that a thread can be migrated among different physical nodes. In theory, an allocator can still avoid remote allocations if it could check the physical node of each thread and make sure that a thread only gets a memory block.  before each allocation,  either the memory allocator should check the origin
+%the expensiveness of identifying a thread's location or a
+
+%Based on our investigation, the major reason of this problem is due to thread migrations. 
+
+%that will maintain objects from the same thread. 
+
+%In TCMalloc-NUMA, allocations will be satisfied from a per-thread heap first, and then the freelist of the current node. However, \textit{TCMalloc-NUMA has multiple issues that may significantly affect its effectiveness}. First, it did not control deallocations of objects. A freed object is always placed into the deallocating thread's local buffer, a mechanism originated from TcMalloc~\cite{tcmalloc}. However, if such an object is originated from a remote node, this clearly will cause unnecessary remote accesses. Second, it did not control the placement of threads: a thread can be migrated to a remote node upon synchronizations or system calls, which not only force this thread to access its stack remotely but also reload all data that are already in the cache of its original node.  Further, after the migration, all deallocated objects by this thread will be placed into the new node's freelist afterwards, causing unnecessary remote accesses. 
+
+In order to improve the locality of memory allocations, our major insight is to \textbf{bind threads inside the memory allocator}. Although threads binding has been proposed before to improve application performance running on the NUMA architecture~\cite{},  our work is the first one to do so inside the allocator. The 
+%\textbf{This paper proposes a novel memory allocator -- \NM{} -- that considers both hardware heterogeneity and allocation/deallocation attributes, with its fine-grained memory management}. \NM{} not only deals with hardware heterogeneity, but also employs different policies for objects with different attributes, such as share-ability, allocation pattern, sizes, and origin. We proposes multiple mechanisms that improve both load balance and locality, as detailed in the following.   
 
 %Simply integrating thread binding, heap interleaving and huge page does not guarantee good performance. Instead, carefully design is required to properly coordinate the thread scheduling, memory object allocation/deallocation and huge page management to achieve better performance.
 
-We propose an \textbf{origin-based memory management} ensuring that memory allocations are always satisfied from the local node of the requesting thread (called ``\textbf{local allocations}''). Note that the origin-based memory management is significantly different from the first-touch policy~\cite{lameter2013numa}. Under the first touch policy, a physical page is allocated from the node where a process first touches a virtual page. However, the first-touch policy does not handle freed objects, which could still introduce significant remote accesses in multi-threaded environment.  
-Instead, \textit{the origin-based mechanism will track the origin of each object, and return a freed object based on its origin:} a freed object will be placed into the deallocating thread's local buffer \textbf{only if} it is originated from the same node that the current thread is running on; otherwise, it will be returned to its original node. \textit{Second, \NM{} introduces an origin-computable design that the physical origin can be simply computed within constant time}, as further described in Section~\ref{sec:overview}. This is important to reduce the overhead of checking the origin of each object, especially for applications with extensive deallocations. 
+We propose an \textbf{origin-based memory management} ensuring that memory allocations are always satisfied from the local node of the requesting thread (called ``\textbf{local allocations}''). 
+%Note that the origin-based memory management is significantly different from the first-touch policy~\cite{lameter2013numa}. Under the first touch policy, a physical page is allocated from the node where a process first touches a virtual page. However, the first-touch policy does not handle freed objects, which could still introduce significant remote accesses in multi-threaded environment.  
+ \textit{The origin-based mechanism will track the origin of each object, and return a freed object based on its origin:} a freed object will be placed into the deallocating thread's local buffer \textbf{only if} it is originated from the same node that the current thread is running on; otherwise, it will be returned to its original node. \textit{Second, \NM{} introduces an origin-computable design that the physical origin can be simply computed within constant time}, as further described in Section~\ref{sec:overview}. This is important to reduce the overhead of checking the origin of each object, especially for applications with extensive deallocations. 
 \textit{Third, it further includes an origin-based allocation that will perform the allocations based on the origin of a thread, which node the thread is running on, in order to ensure local allocations}.  
 
 
